# ChangeLog for sci-mathematics/cdfplayer
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*cdfplayer-10.0.2 (08 Mar 2015)

  08 Mar 2015; zcj <ustcscgy@163.com> +cdfplayer-10.0.2.ebuild,
  -cdfplayer-9.0.1.ebuild, -files/cdfplayer-9.0.1-installer.patch:
  sci-mathematics/cdfplayer: Version bump; Patch is not needed.

*cdfplayer-9.0.1 (11 Mar 2013)

  11 Mar 2013; Jauhien Piatlicki (jauhien) <piatlicki@gmail.com>
  -cdfplayer-9.0.0.ebuild, -files/cdfplayer-9.0.0-installer.patch,
  +cdfplayer-9.0.1.ebuild, +files/cdfplayer-9.0.1-installer.patch:
  version bump

*cdfplayer-9.0.0 (05 Jan 2013)

  05 Jan 2013; Jauhien Piatlicki (jauhien) <piatlicki@gmail.com>
  -cdfplayer-8.0.4.ebuild, -files/cdfplayer-8.0.4-installer.patch,
  +cdfplayer-9.0.0.ebuild, +files/cdfplayer-9.0.0-installer.patch:
  version bump

*cdfplayer-8.0.4 (23 Nov 2012)

  23 Nov 2012; Jauhien Piatlicki (jauhien) <piatlicki@gmail.com>
  +cdfplayer-8.0.4.ebuild, +files/cdfplayer-8.0.4-installer.patch,
  +metadata.xml:
  initial commit for bug #421019